--- a/privacy.html
+++ b/privacy.html
@@ -74,63 +74,150 @@
                 <div class="space-y-6">
                     <div>
                         <h2>Introduction</h2>
-                        <p>Welcome to the Train Simulator Mod Archive ("we," "our," or "us"). We are committed to protecting your privacy and ensuring transparency about how we collect, use, and protect your personal information.</p>
+                        <p>Welcome to the Train Simulator Mod Archive ("we," "our," or "us"). We are committed to protecting your privacy and ensuring transparency about how we collect, use, and protect your information.</p>
                         <p><strong>This Privacy Policy explains our practices regarding data collection and use when you visit our website at trainsimarchive.org.</strong></p>
+                        <p class="text-muted" style="margin-top: 1rem;">Effective Date: November 28, 2025 | Last Updated: November 28, 2025</p>
                     </div>
 
                     <div>
                         <h2>Information We Collect</h2>
-                        <p><strong>Archive Statistics:</strong> We collect page view counts for HTML pages visited and track the number of times content is downloaded. This helps us maintain usage statistics for the archive.</p>
-                        <p><strong>Contact Information:</strong> Only when you voluntarily reach out for support, feedback, or submit suggestions.</p>
-                        <p><strong>Technical Data:</strong> Basic browser functionality data needed for the website to operate properly, such as search preferences and navigation.</p>
+                        
+                        <h3 style="font-size: 1.1rem; margin-top: 1.5rem; margin-bottom: 0.75rem;">Automatically Collected Data</h3>
+                        <ul class="list-disc pl-6 mb-4">
+                            <li><strong>Download Statistics:</strong> We track the number of times each mod file is downloaded to provide accurate download counts and analytics</li>
+                            <li><strong>Page Views:</strong> We count page visits to understand which content is most accessed</li>
+                            <li><strong>Daily Analytics:</strong> Aggregated daily download statistics to track trends and usage patterns</li>
+                            <li><strong>Search Queries:</strong> Anonymized search terms to improve search functionality and discover what users are looking for</li>
+                        </ul>
+
+                        <h3 style="font-size: 1.1rem; margin-top: 1.5rem; margin-bottom: 0.75rem;">Information You Provide</h3>
+                        <ul class="list-disc pl-6 mb-4">
+                            <li><strong>Contact Information:</strong> Only when you voluntarily reach out for support, feedback, or submit suggestions via email</li>
+                            <li><strong>Cookie Preferences:</strong> Your consent choices regarding the use of browser storage for improved functionality</li>
+                        </ul>
+
+                        <h3 style="font-size: 1.1rem; margin-top: 1.5rem; margin-bottom: 0.75rem;">Technical Information</h3>
+                        <ul class="list-disc pl-6 mb-4">
+                            <li><strong>Browser Data:</strong> Basic browser functionality data needed for the website to operate (theme preferences, navigation state)</li>
+                            <li><strong>Session Storage:</strong> Temporary data to improve your browsing experience (recently shown mods, navigation history)</li>
+                        </ul>
+
+                        <p class="text-muted" style="margin-top: 1rem;"><strong>We do NOT collect:</strong> IP addresses, precise geolocation, personal identifiers, login credentials, or any other personally identifiable information beyond what you voluntarily provide.</p>
                     </div>
 
                     <div>
                         <h2>How We Use Your Information</h2>
                         <p>We use collected information to:</p>
                         <ul class="list-disc pl-6 mb-4">
-                            <li>Track view counts for archive pages and download statistics</li>
-                            <li>Maintain usage statistics to understand which content is most accessed</li>
+                            <li>Display accurate download counts and view statistics on the website</li>
+                            <li>Generate analytics charts showing download trends over time</li>
+                            <li>Identify popular mods and trending content</li>
+                            <li>Improve search functionality and content discovery</li>
+                            <li>Maintain usage statistics to understand archive performance</li>
                             <li>Provide basic website functionality and navigation</li>
-                            <li>Respond to support requests and feedback when contacted</li>
-                            <li>Ensure the archive operates properly and securely</li>
+                            <li>Respond to support requests and user feedback when contacted</li>
+                            <li>Ensure the archive operates properly, securely, and efficiently</li>
+                            <li>Cache metadata to improve loading times and reduce server requests</li>
                         </ul>
                     </div>
 
                     <div>
-                        <h2>Information Sharing and Disclosure</h2>
-                        <p>We do not sell, trade, or rent your personal information. We may share information with:</p>
+                        <h2>Cookies and Local Storage</h2>
+                        <p>We use browser storage technologies to enhance your experience:</p>
                         <ul class="list-disc pl-6 mb-4">
-                            <li><strong>Service Providers:</strong> Cloudflare (CDN, security), GitHub (version control)</li>
-                            <li><strong>Legal Requirements:</strong> When required by law or to protect rights and safety</li>
+                            <li><strong>Cookie Consent:</strong> Stores your consent choice regarding the use of browser storage</li>
+                            <li><strong>Session Storage:</strong> Temporarily stores recently shown mods to provide variety when refreshing the homepage</li>
+                            <li><strong>Preferences:</strong> Saves non-personal settings like theme preferences (if implemented)</li>
+                        </ul>
+                        <p>You can control browser storage through your browser settings. Disabling storage may affect website functionality.</p>
+                    </div>
+
+                    <div>
+                        <h2>Third-Party Services</h2>
+                        <p>We use the following third-party services to operate the archive:</p>
+                        <ul class="list-disc pl-6 mb-4">
+                            <li><strong>Cloudflare:</strong> CDN, security, R2 storage for mod files, Workers for API, and KV storage for statistics</li>
+                            <li><strong>GitHub:</strong> Version control and mod metadata storage</li>
+                            <li><strong>Google Fonts:</strong> Typography and font delivery</li>
+                            <li><strong>Font Awesome:</strong> Icon library</li>
+                            <li><strong>Chart.js:</strong> Analytics visualization (loaded from CDN)</li>
+                        </ul>
+                        <p>These services have their own privacy policies. We recommend reviewing them.</p>
+                    </div>
+
+                    <div>
+                        <h2>Information Sharing and Disclosure</h2>
+                        <p><strong>We do not sell, trade, or rent your information to third parties.</strong></p>
+                        <p>We may share anonymized, aggregated statistics (e.g., "total downloads", "most popular mods") publicly on the website.</p>
+                        <p>We may disclose information when:</p>
+                        <ul class="list-disc pl-6 mb-4">
+                            <li>Required by law, legal process, or government request</li>
+                            <li>Necessary to protect our rights, property, or safety</li>
+                            <li>Necessary to prevent fraud or security threats</li>
                         </ul>
                     </div>
 
                     <div>
                         <h2>Data Security</h2>
-                        <p>We implement security measures including HTTPS/TLS encryption, access controls, secure cloud hosting, and regular security updates.</p>
-                        <p>However, no method of internet transmission is 100% secure. We cannot guarantee absolute security.</p>
-                    </div>
-
-                    <div>
-                        <h2>Your Rights and Choices</h2>
-                        <p>Since we collect minimal data (primarily view counts and download statistics), there is very limited personal information to manage. You can configure your browser settings as needed for your privacy preferences.</p>
+                        <p>We implement industry-standard security measures including:</p>
+                        <ul class="list-disc pl-6 mb-4">
+                            <li><strong>HTTPS/TLS Encryption:</strong> All data transmitted between your browser and our servers is encrypted</li>
+                            <li><strong>Secure Cloud Hosting:</strong> Infrastructure hosted on Cloudflare's secure platform</li>
+                            <li><strong>Access Controls:</strong> Limited access to backend systems and databases</li>
+                            <li><strong>Regular Updates:</strong> Software and security patches applied regularly</li>
+                            <li><strong>API Rate Limiting:</strong> Protection against abuse and excessive requests</li>
+                        </ul>
+                        <p>However, no method of internet transmission or electronic storage is 100% secure. We cannot guarantee absolute security but continuously work to protect your data.</p>
                     </div>
 
                     <div>
                         <h2>Data Retention</h2>
-                        <p>We retain information as necessary to provide services, comply with legal obligations, and improve user experience. We regularly review and delete unnecessary data.</p>
+                        <p>We retain information as follows:</p>
+                        <ul class="list-disc pl-6 mb-4">
+                            <li><strong>Download Statistics:</strong> Retained indefinitely to maintain historical analytics</li>
+                            <li><strong>Daily Analytics:</strong> Retained for analysis and trend tracking</li>
+                            <li><strong>Mod Metadata:</strong> Cached and refreshed every 6 hours automatically</li>
+                            <li><strong>Session Data:</strong> Cleared when you close your browser</li>
+                            <li><strong>Support Correspondence:</strong> Retained as long as necessary to resolve your inquiry</li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <h2>Your Rights and Choices</h2>
+                        <p>Since we collect minimal data (primarily anonymous download counts and statistics), there is very limited personal information to manage. You have the right to:</p>
+                        <ul class="list-disc pl-6 mb-4">
+                            <li>Configure your browser settings to control cookies and local storage</li>
+                            <li>Use private/incognito browsing to avoid session storage</li>
+                            <li>Contact us to request information about data we may have</li>
+                            <li>Request deletion of any correspondence or feedback you've submitted</li>
+                        </ul>
+                        <p>Our cookie consent system allows you to accept or decline the use of browser storage for enhanced functionality.</p>
+                    </div>
+
+                    <div>
+                        <h2>Children's Privacy</h2>
+                        <p>Our website is not directed to children under 13. We do not knowingly collect personal information from children. If you believe a child has provided us with personal information, please contact us.</p>
+                    </div>
+
+                    <div>
+                        <h2>International Users</h2>
+                        <p>This website is operated from the United States. If you access the site from outside the U.S., your information may be transferred to, stored, and processed in the U.S. where our servers are located.</p>
                     </div>
 
                     <div>
                         <h2>Changes to This Privacy Policy</h2>
-                        <p>We may update this Privacy Policy from time to time. When we make changes, we will update the "Last Updated" date. Your continued use of our website after changes constitutes acceptance of the updated policy.</p>
-                        <p>Effective Date: November 27, 2025 | Last Updated: November 27, 2025</p>
+                        <p>We may update this Privacy Policy from time to time to reflect changes in our practices or legal requirements. When we make significant changes, we will update the "Last Updated" date at the top of this policy.</p>
+                        <p>Your continued use of our website after changes constitutes acceptance of the updated policy. We encourage you to review this policy periodically.</p>
                     </div>
 
                     <div>
                         <h2>Contact Information</h2>
-                        <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us at <a href="mailto:historyforeveryoneproductions1@gmail.com">historyforeveryoneproductions1@gmail.com</a>.</p>
+                        <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us:</p>
+                        <ul class="list-disc pl-6 mb-4">
+                            <li><strong>Email:</strong> <a href="mailto:historyforeveryoneproductions1@gmail.com">historyforeveryoneproductions1@gmail.com</a></li>
+                            <li><strong>Website:</strong> <a href="https://trainsimarchive.org">trainsimarchive.org</a></li>
+                        </ul>
+                        <p>We will respond to inquiries within a reasonable timeframe.</p>
                     </div>
                 </div>
             </section>
