--- a/trurail-simulations/bnsf-sd70ace.html
+++ b/trurail-simulations/bnsf-sd70ace.html
@@ -80,8 +80,8 @@
                 </div>
                 <a href="#" 
                    class="mod-exconrail-download-button download-trigger" 
-                   data-url="https://files.trainsimarchive.org/TRS%20-%20CR_U36B.rar"
-                   data-name="TRS - CR_U36B.rar">
+                   data-url="https://files.trainsimarchive.org/TRS%20-%20BNSF%20SD70ACe.rar"
+                   data-name="TRS - BNSF SD70ACe.rar">
                     Download
                 </a>
             </div>
@@ -89,7 +89,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_4df02ac3b4e64ab8a8bdab8ebc46aef3~mv2.jpg" alt="Conrail U36B">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_74d1fdd358ca44e0945ec01d93543ee2~mv2.png" alt="Conrail U36B">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -103,29 +103,20 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://files.trainsimarchive.org/media/14a601_4df02ac3b4e64ab8a8bdab8ebc46aef3~mv2.jpg" alt="Image 1">
+                                <img src="https://files.trainsimarchive.org/media/14a601_74d1fdd358ca44e0945ec01d93543ee2~mv2.png" alt="Image 1">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(1)" data-index="1">
-                                <img src="https://files.trainsimarchive.org/media/14a601_b9ec1a0dd22349e899e1f8a404bfb286~mv2.jpg" alt="Image 2">
+                                <img src="https://files.trainsimarchive.org/media/14a601_4f713e652e7f41758ba75dd697964cf2~mv2.png" alt="Image 2">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(2)" data-index="2">
-                                <img src="https://files.trainsimarchive.org/media/14a601_b8440db93cd34d32a0170d593c313b99~mv2.jpg" alt="Image 3">
+                                <img src="https://files.trainsimarchive.org/media/14a601_844ea460756f44c6a83c698a4a746e30~mv2.png" alt="Image 3">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(3)" data-index="3">
-                                <img src="https://files.trainsimarchive.org/media/14a601_7559e0d011b844f1ac9d5015ad68ffee~mv2.jpg" alt="Image 4">
-                            </div>
-                            <div class="gallery-thumb" onclick="openLightbox(4)" data-index="4">
-                                <img src="https://files.trainsimarchive.org/media/14a601_07736a8e71424ca0a31a5e9102eb1822~mv2.jpg" alt="Image 5">
-                            </div>
-                            <div class="gallery-thumb" onclick="openLightbox(5)" data-index="5">
-                                <img src="https://files.trainsimarchive.org/media/14a601_c19df694f2804aeca007928c280d5c6d~mv2.jpg" alt="Image 6">
-                            </div>
-                            <div class="gallery-thumb" onclick="openLightbox(6)" data-index="6">
-                                <img src="https://files.trainsimarchive.org/media/14a601_ee4cf892cdee44fcb2ea7228d6568185~mv2.jpg" alt="Image 7">
+                                <img src="https://files.trainsimarchive.org/media/14a601_342a255329354d718d15b9bd612d0e20~mv2.png" alt="Image 4">
                             </div>
                         </div>
                     </div>
-                    <p class="page-updated">Page Updated: 11/27/2025</p>
+                    <p class="page-updated">Page Updated: 11/28/2025</p>
                 </div>
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
@@ -147,18 +138,18 @@
                         <li><a href="https://store.steampowered.com/app/208365/Train_Simulator_SD70_V2_Volume_2_Loco_AddOn/" target="_blank">SD70 V2 Volume 2 Loco Add-On</a></li>
                         <li><a href="https://store.searchlight-simulations.com/products/16n-710g3c-ii-ep" target="_blank">Searchlight Simulations EMD 16N-710G3C Enhancement Pack</a></li>
                     </ul>
-                    <div class="file-details-box" data-name="TRS - CR_U36B.rar">
+                    <div class="file-details-box" data-name="TRS - BNSF SD70ACe.rar">
                         <a href="#" 
                            class="download-trigger" 
-                           data-url="https://files.trainsimarchive.org/TRS%20-%20CR_U36B.rar"
-                           data-name="TRS - CR_U36B.rar"
+                           data-url="https://files.trainsimarchive.org/TRS%20-%20BNSF%20SD70ACe.rar"
+                           data-name="TRS - BNSF SD70ACe.rar"
                            style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
                             <div style="display: flex; align-items: center; gap: 0.75rem;">
                                 <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
                                     <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
                                 </div>
                                 <div style="flex: 1;">
-                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">TRS - CR_U36B.rar</div>
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">TRS - BNSF SD70ACe.rar</div>
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
