--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -276,11 +276,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/atsf-u36c.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/118616961_4573624159345176_1281915012024704119_n.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/atsf-u36c.html" class="mod-card-link">
                                 <h3 class="mod-card-title">ATSF U36C</h3>
                             </a>
                             <p class="mod-card-description">A repaint of GE's U36C in Santa Fe's 'Bluebonnet' scheme.</p>
@@ -324,11 +324,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
+                        <a href="trurail-simulations/cnw-emd-e8.html" class="mod-card-link">
                             <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/cnw-emd-e8.html" class="mod-card-link">
                                 <h3 class="mod-card-title">C&NW EMD E8</h3>
                             </a>
                             <p class="mod-card-description">A repaint of the EMD E8 in the classic Chicago & Northwestern scheme.</p>
