--- a/cleartracks/ex-conrail-c40-8-pack.html
+++ b/cleartracks/ex-conrail-c40-8-pack.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Experience the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.">
+    <meta name="description" content="Four repaints of GE's C40-8 locomotive ordered by Conrail to depict units acquired by CSX">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
-    <title>Amtrak F40PH EP - Train Simulator Mod Archive</title>
+    <title>Ex-Conrail C40-8 Pack - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
@@ -69,18 +69,18 @@
         <div class="mod-exconrail-section">
             <div class="text-gray-400 mb-2">
                 <a href="../index.html" class="hover:underline">Home</a> >
-                <a href="../trurail-simulations.html" class="hover:underline">UTS Creations</a> >
-                <span>Amtrak F40PH EP</span>
+                <a href="../cleartracks.html" class="hover:underline">ClearTracks</a> >
+                <span>Ex-Conrail C40-8 Pack</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
-                    <h1 class="text-2xl font-bold">Amtrak F40PH EP</h1>
-                    <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">UTS Creations</a></p>
+                    <h1 class="text-2xl font-bold">Ex-Conrail C40-8 Pack</h1>
+                    <p class="text-gray-400">By <a href="../cleartracks.html" class="hover:underline">ClearTracks</a></p>
                 </div>
                 <a href="#" 
                    class="mod-exconrail-download-button download-trigger" 
-                   data-url="https://files.trainsimarchive.org/UTS%20-%20Amtrak%20F40PH%20EP.7z"
-                   data-name="UTS - Amtrak F40PH EP.7z">
+                   data-url="https://files.trainsimarchive.org/CT%20-%20CR%20Dash%208%20Pack.zip"
+                   data-name="CT - CR Dash 8 Pack.zip">
                     Download
                 </a>
             </div>
@@ -88,7 +88,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/amtrakf40ep.png" alt="Amtrak F40PH EP">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/123053261_4854063117967944_3650949522504316825_n.jpg" alt="Ex-Conrail C40-8 Pack">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -102,43 +102,40 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://files.trainsimarchive.org/media/amtrakf40ep.png" alt="Image 1">
+                                <img src="https://files.trainsimarchive.org/media/123053261_4854063117967944_3650949522504316825_n.jpg" alt="Image 1">
                             </div>
                         </div>
                     </div>
-                    <p class="page-updated">Page Updated: 11/27/2025</p>
+                    <p class="page-updated">Page Updated: 5/17/2025</p>
                 </div>
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        Experience the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.
+                        This download contains four repaints of GE's C40-8 locomotive ordered by Conrail to depict units acquired by CSX.
                     </p>  
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
-                        <li>All-New Sound Set</li>
-                        <li>Cold Start & Isolation Switch</li>
-                        <li>Dynamic Exhaust Effects</li>
-                        <li>HEP Simulation</li>
-                        <li>Improved Physics</li>
-                        <li>Insertable Reverser, Isolation Switch, and PCS</li>
-                        <li>Realistic Headlights</li>
+                        <li>Conrail Quality Livery</li>
+                        <li>Conrail Livery</li>
+                        <li>Custom Decals</li>
                     </ul>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Requirements</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
-                        <li><a href="https://store.steampowered.com/app/208296/Train_Simulator_Amtrak_F40PH_California_Zephyr_Loco_AddOn/" target="_blank">Amtrak F40PH ‘California Zephyr’ Loco Add-On</a></li>
+                        <li><a href="https://store.steampowered.com/app/208336/Train_Simulator_Norfolk_Southern_Dash840C_Loco_AddOn/" target="_blank">Norfolk Southern Dash8-40C Loco Add-On</a></li>
+                        <li><a href="https://store.steampowered.com/app/2468710/Train_Simulator_Classic_MLW_Audio_GE_FDL_16_Sound_and_Enhancement_Pack/" target="_blank">MLW Audio GE FDL 16 Sound and Enhancement Pack</a></li>
                     </ul>
-                    <div class="file-details-box" data-name="UTS - Amtrak F40PH EP.7z">
+                    <div class="file-details-box" data-name="CT - CR Dash 8 Pack.zip">
                         <a href="#" 
                            class="download-trigger" 
-                           data-url="https://files.trainsimarchive.org/UTS%20-%20Amtrak%20F40PH%20EP.7z"
-                           data-name="UTS - Amtrak F40PH EP.7z"
+                           data-url="https://files.trainsimarchive.org/CT%20-%20CR%20Dash%208%20Pack.zip"
+                           data-name="CT - CR Dash 8 Pack.zip"
                            style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
                             <div style="display: flex; align-items: center; gap: 0.75rem;">
                                 <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
                                     <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
                                 </div>
                                 <div style="flex: 1;">
-                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">UTS - Amtrak F40PH EP.7z</div>
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">CT - CR Dash 8 Pack.zip</div>
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
