--- a/trurail-simulations/bnsf-c44-9w-heritage-1.html
+++ b/trurail-simulations/bnsf-c44-9w-heritage-1.html
@@ -91,7 +91,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/unnamed.png" alt="BNSF C44-9W Heritage 1">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/unnamed514442.png" alt="BNSF C44-9W Heritage 1">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://files.trainsimarchive.org/media/unnamed.png" alt="Image 1">
+                                <img src="https://files.trainsimarchive.org/media/unnamed514442.png" alt="Image 1">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(1)" data-index="1">
                                 <img src="https://files.trainsimarchive.org/media/unnamed2.png" alt="Image 2">
