--- a/cleartracks/ex-conrail-c40-8-pack.html
+++ b/cleartracks/ex-conrail-c40-8-pack.html
@@ -33,11 +33,11 @@
                             Archive
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="archiveDropdown">
-                            <li><a class="dropdown-item" href="../trurail-simulations.html">UTS Creations</a></li>
-                            <li><a class="dropdown-item" href="#">ClearTracks</a></li>
-                            <li><a class="dropdown-item" href="#">UTS Creations</a></li>
-                            <li><a class="dropdown-item" href="#">East Coast Simulations</a></li>
-                            <li><a class="dropdown-item" href="#">Virtual Rail Creations</a></li>
+                            <li><a class="dropdown-item" href="../trurail-simulations.html">TruRail Simulations</a></li>
+                            <li><a class="dropdown-item" href="../cleartracks.html">ClearTracks</a></li>
+                            <li><a class="dropdown-item" href="../uts-creations.html">UTS Creations</a></li>
+                            <li><a class="dropdown-item" href="../east-coast-simulations.html">East Coast Simulations</a></li>
+                            <li><a class="dropdown-item" href="../virtual-rail-creations.html">Virtual Rail Creations</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -58,11 +58,11 @@
             <a href="../index.html" class="mobile-nav-link">Home</a>
             <a href="../contributors.html" class="mobile-nav-link">Contributors</a>
             <div class="mobile-nav-divider">Archive</div>
-            <a href="../trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
-            <a href="#" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
-            <a href="#" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
-            <a href="#" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
-            <a href="#" class="mobile-nav-link mobile-nav-sublink">Virtual Rail Creations</a>
+            <a href="../trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
+            <a href="../cleartracks.html" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
+            <a href="../uts-creations.html" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
+            <a href="../east-coast-simulations.html" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
+            <a href="../virtual-rail-creations.html" class="mobile-nav-link mobile-nav-sublink">Virtual Rail Creations</a>
         </div>
     </nav>
     <main class="mod-exconrail-main">
@@ -121,8 +121,8 @@
                     </ul>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Requirements</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
-                        <li><a href="https://store.steampowered.com/app/208336/Train_Simulator_Norfolk_Southern_Dash840C_Loco_AddOn/" target="_blank">Norfolk Southern Dash8-40C Loco Add-On</a></li>
-                        <li><a href="https://store.steampowered.com/app/2468710/Train_Simulator_Classic_MLW_Audio_GE_FDL_16_Sound_and_Enhancement_Pack/" target="_blank">MLW Audio GE FDL 16 Sound and Enhancement Pack</a></li>
+                        <li><a href="https://store.steampowered.com/app/277732/Train_Simulator_Norfolk_Southern_Dash840C_Loco_AddOn/" target="_blank">Norfolk Southern Dash8-40C Loco Add-On</a></li>
+                        <li><a href="https://store.searchlight-simulations.com/products/7fdl-16-ep" target="_blank">MLW Audio GE FDL 16 Sound and Enhancement Pack</a></li>
                     </ul>
                     <div class="file-details-box" data-name="CT - CR Dash 8 Pack.zip">
                         <a href="#" 
