--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
     <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://www.trainsimarchive.org/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://www.trainsimarchive.org/css/custom-dark.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom-dark.css" rel="stylesheet">
     <style>
         .error-container {
             min-height: 70vh;
@@ -69,17 +69,17 @@
             <div class="collapse navbar-collapse desktop-nav" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.trainsimarchive.org/index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.trainsimarchive.org/contributors.html">Contributors</a>
+                        <a class="nav-link" href="contributors.html">Contributors</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="archiveDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Archive
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="archiveDropdown">
-                            <li><a class="dropdown-item" href="https://www.trainsimarchive.org/trurail-simulations.html">TruRail Simulations</a></li>
+                            <li><a class="dropdown-item" href="trurail-simulations.html">TruRail Simulations</a></li>
                             <li><a class="dropdown-item" href="#">ClearTracks</a></li>
                             <li><a class="dropdown-item" href="#">UTS Creations</a></li>
                             <li><a class="dropdown-item" href="#">East Coast Simulations</a></li>
@@ -102,10 +102,10 @@
     <nav class="mobile-nav" id="mobileNav">
         <div class="mobile-nav-content">
             <input type="text" placeholder="Search..." class="search-input mobile-search" id="mobileSearchInput">
-            <a href="https://www.trainsimarchive.org/index.html" class="mobile-nav-link">Home</a>
-            <a href="https://www.trainsimarchive.org/contributors.html" class="mobile-nav-link">Contributors</a>
+            <a href="index.html" class="mobile-nav-link">Home</a>
+            <a href="contributors.html" class="mobile-nav-link">Contributors</a>
             <div class="mobile-nav-divider">Archive</div>
-            <a href="https://www.trainsimarchive.org/trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
+            <a href="trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
             <a href="#" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
             <a href="#" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
             <a href="#" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
@@ -122,7 +122,7 @@
             </p>
             
             <div>
-                <a href="https://www.trainsimarchive.org/index.html" class="error-btn">Return Home</a>
+                <a href="index.html" class="error-btn">Return Home</a>
                 <a href="javascript:history.back()" class="error-btn">Go Back</a>
             </div>
         </div>
