--- a/search.html
+++ b/search.html
@@ -34,10 +34,10 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="archiveDropdown">
                             <li><a class="dropdown-item" href="trurail-simulations.html">TruRail Simulations</a></li>
-                            <li><a class="dropdown-item" href="#">ClearTracks</a></li>
-                            <li><a class="dropdown-item" href="#">UTS Creations</a></li>
-                            <li><a class="dropdown-item" href="#">East Coast Simulations</a></li>
-                            <li><a class="dropdown-item" href="#">Virtual Rail Creations</a></li>
+                            <li><a class="dropdown-item" href="cleartracks.html">ClearTracks</a></li>
+                            <li><a class="dropdown-item" href="uts-creations.html">UTS Creations</a></li>
+                            <li><a class="dropdown-item" href="east-coast-simulations.html">East Coast Simulations</a></li>
+                            <li><a class="dropdown-item" href="virtual-rail-creations.html">Virtual Rail Creations</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -60,10 +60,10 @@
             <a href="contributors.html" class="mobile-nav-link">Contributors</a>
             <div class="mobile-nav-divider">Archive</div>
             <a href="trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
-            <a href="#" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
-            <a href="#" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
-            <a href="#" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
-            <a href="#" class="mobile-nav-link mobile-nav-sublink">Virtual Rail Creations</a>
+            <a href="cleartracks.html" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
+            <a href="uts-creations.html" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
+            <a href="east-coast-simulations.html" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
+            <a href="virtual-rail-creations.html" class="mobile-nav-link mobile-nav-sublink">Virtual Rail Creations</a>
         </div>
     </nav>
     
